# dip-testbed

./: .gitignore  README.md  build.sh  package.sh  publish.sh
ackend/: package-lock.json  package.json  server.ts
adafruit-nrf52-sh-agent/: README.md  monitor.sh  upload.sh
agent/: Cargo.toml  Pipfile  README.md  agent.py  agent_nrf52.py  agent_nrf52_test.py  agent_util.py  agent_util_test.py  check.sh  cli.py  codec.py  engine.py  entrypoint.py  fp.py  lint.sh  log.py  main.py  protocol.py  s11n.py  s11n_test.py  sh.py  test.sh  ws.py
agent/src/: adafruit_nrf52_sh_agent.rs  cli.rs  commands.rs  errors.rs  main.rs
agent/static/adafruit_nrf52/: README.md  upload.sh
backend/: .scalafmt.conf  README.md  build.sbt  build.sh
basket/: Cargo.toml  main.ts  package-lock.json  package.json  tsconfig.json
broker/: README.md  docker-compose.yaml
client/: .gitignore  .pylintrc  Dockerfile  Pipfile  README.md  agent.py  agent_anvyl.py  agent_anvyl_test.py  agent_entrypoints.py  agent_nrf52.py  agent_nrf52_test.py  agent_util.py  agent_util_test.py  backend_domain.py  backend_util.py  build.sh  build_docker.sh  cli.py  cli_util.py  codec.py  codec_binary.py  codec_hybrid.py  codec_json.py  codec_test.py  commands.sh  death.py  dip-agent.py  dip-client.py  dip_client.py  dip_client.spec  engine.py  entrypoint.py  hook-cli.py  lint.sh  main.spec  monitor_serial.py  monitor_serial_button_led_bytes.py  monitor_serial_button_led_bytes_app.py  monitor_serial_hex_bytes.py  monitor_serial_hexbytes.py  (+22 more)
database/: README.md  docker-compose.yaml
docker/: README.md  (+1 more)
(+470 files in other folders)
