[package]
name = "agent"
version = "0.1.0"
authors = ["Krisjanis Veinbahs <krisjanis.veinbahs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tokio = { version = "1.12.0", default-features = false, features = [ "rt-multi-thread", "net", "sync", "macros", "io-std", "process", "time" ] }
tokio-tungstenite = "0.15.0"
env_logger = "0.9.0"
url = "2.0.0"
clap = "3.0.0-beta.4"
futures-channel = "0.3.17"
futures-util = { version = "0.3.17", default-features = false, features = ["async-await", "sink", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
tempfile = "3.2.0"
base64 = "0.13.0"
